refactor: README.md refatorado